# aitube

./: .env  .env.example  Dockerfile  aitube.sh  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
frontend/: index.html  watch.html
frontend/css/: style.css
frontend/js/: main.js
migrations/: env.py
nginx/: nginx.conf
src/app/: config.py  database.py  main.py
src/app/api/: deps.py
src/app/api/v1/: auth.py  channels.py  router.py  search.py  social.py  videos.py
src/app/core/: security.py
src/app/models/: __init__.py  base.py  user.py  video.py
src/app/schemas/: __init__.py  comment.py  token.py  user.py  video.py
src/app/services/: analytics.py  recommendation.py  search.py  storage.py
src/app/tasks/__init__.py/: video_tasks.py  worker.py
